2005-10-08  Carl Worth  <cworth@cworth.org>

	* configure.in: Enable PS and PDF backends by default, (in
	preparation for 1.2.0)
	
2005-10-08  Carl Worth  <cworth@cworth.org>

	* configure.in: Fix typo leading to truncated error message
	(Christian Biesinger <cbiesinger@web.de>).

2005-10-07  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-pdf-surface.c: (emit_solid_pattern),
	(emit_surface_pattern), (_cairo_pdf_color_stop_compare),
	(emit_pattern_stops), (emit_linear_pattern), (emit_radial_pattern),
	(emit_pattern), (_cairo_pdf_surface_fill_path),
	(_cairo_pdf_surface_composite_trapezoids),
	(_cairo_pdf_surface_show_glyphs):
	Apply patch from #4672 by Jens Taprogge to implement color stop
	sorting and multiple color stops for gradients.

2005-10-06  Carl Worth  <cworth@cworth.org>

	* src/cairo-xlib-surface.c: (_draw_image_surface): Add missing
	initialization for ximage.xoffset.

	* test/.cvsignore: Ignore the -argb32-out.png and -rgb24-out.png
	images as well.

	* test/cairo-test.c: (cairo_test_for_target): Pass a format to the
	surface create functions.
	(create_image_surface): Condense create_argb_image_surface and
	create_rgb_image_surface into a single function.
	(create_xlib_surface): Add support for CAIRO_FORMAT_RGB24 in
	addition to CAIRO_FORMAT_ARGB32.
	Add a new target for testing xlib with CAIRO_FORMAT_RGB24.
	
2005-10-04  Anders Carlsson  <andersca@imendio.com>

	* configure.in: Invoke PKG_PROG_PKG_CONFIG so $PKG_CONFIG
	will be set early on.

2005-10-03  Carl Worth  <cworth@cworth.org>

	* NEWS: Add notes for the 1.0.2 release.

2005-09-30  Anders Carlsson  <andersca@imendio.com>

        * src/cairo-atsui-font.c:
        (_cairo_atsui_font_face_destroy):
        (_cairo_atsui_font_face_scaled_font_create):
        (cairo_atsui_font_face_create_for_atsu_font_id):
        (CreateSizedCopyOfStyle):
        (_cairo_atsui_font_set_metrics):
        (_cairo_atsui_font_create_scaled):
        (_cairo_atsui_font_create_toy):